# i3-window-focus-fun

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.c  sdlwin.c
